--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <title>Excursion</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <div id="download">
+      <p>
+        Download Excursion (Coming soon!)
+      </p>
+    </div>
+    <div class="video">
+      <video src="./resources/video/excursion.mp4" autoplay>
+      </video>
+    </div>
+    <div class="middle">
+      <p>
+        Your personal travel guide
+      </p>
+      <div class="memory">
+      <p>
+        Excursion remembers places you like, and reccomends new points of interest around you.
+      </p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt:"tent" />
+
+      </div>
+      <br  />
+
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="phone"  />
+      <p>
+        Coming Soon for iPhone and Android
+      </p>
+    </div>
+    <div id="download">
+      <p>
+        Download Excursion (Coming soon!)
+      </p>
+    </div>
+    <div class="fr">
+      &#169; Excursion
+    </div>
   </body>
 </html>
